Fix typo in test comment
refs #2627

--- a/support/client/test/replication.html
+++ b/support/client/test/replication.html
@@ -1072,7 +1072,7 @@
                 { driver: "vwf/view/document",     node: id, action: "gotProperty",     member: "ps", value: 1 }, // result
               ], "non-delegating property terminating before vwf/model/object during replication" );
 
-              // Getting a self-delegating property during replication during replication
+              // Getting a self-delegating property during replication
 
               driverCalls = []; vwf.getProperty( id, "qs" );
 
